# HotShot

./: .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .typos.toml  CHANGELOG.md  CNAME  CODEOWNERS  CODESTYLE.md  Cargo.toml  Dockerfile  DockerfileDocs  LICENSE  README.md  WORKFLOW.md  clippy.toml  config.toml  crates.js  default.nix  flake.nix  help.html  index.html  justfile  logs.json  logs.txt  nginx.conf  output.json  pr_body.txt  pull_request_template.md  repl.nix  rust-toolchain.toml  rustfmt.toml  script  search-index.js  settings.html  source-files.js  src-files.js  txt.json
centralized_server/: Cargo.toml  README.md
centralized_server/benchmark_client/: Cargo.toml  results.md
centralized_server/benchmark_client/src/: main.rs
centralized_server/orchestrator/: Cargo.toml  results.txt
centralized_server/shared/: Cargo.toml
centralized_server/src/: client.rs  clients.rs  config.rs  lib.rs  main.rs  runs.rs
centralized_server/tests/: multiple_clients.rs
consensus/: Cargo.toml
consensus/src/: da.rs  da_leader.rs  da_member.rs  da_replica.rs  leader.rs  lib.rs  next_leader.rs  replica.rs  sequencing_leader.rs  sequencing_replica.rs  traits.rs  utils.rs
crates/builder-api/: Cargo.toml  README.md
crates/example-types/: Cargo.toml  README.md
crates/examples/: Cargo.toml  all.rs  common.rs  coordinator.rs  orchestrator.rs  process-compose.yaml  single-validator.rs
crates/fakeapi/: Cargo.toml
crates/hotshot/: Cargo.toml
crates/hotshot-qc/: Cargo.toml
crates/hotshot-signature-key/: Cargo.toml
crates/hotshot-stake-table/: Cargo.toml
crates/hotshot-state-prover/: Cargo.toml
crates/libp2p-networking/: .gitignore  Cargo.toml  README.md  flamegraph.sh  test.py
crates/macros/: Cargo.toml
crates/new_task/: Cargo.toml
libp2p-networking/: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README  README.md  flake.nix  grcov.sh  identity_mapping.json  repl.nix  shell.nix  test.py  test.sh
libp2p-networking/.cargo/: audit.toml
libp2p-networking/.github/: dependabot.yml
libp2p-networking/examples/: clichat.rs  counter.rs  counter_bootstrap.rs  counter_controller.rs  identities.rs  isolate.rs
libp2p-networking/src/: direct_message.rs  lib.rs  message.rs  network_node.rs  network_node_handle.rs  parse_config.rs  tracing_setup.rs  ui.rs
libp2p-networking/tests/: counter.rs
libp2p-networking/web/: index.html
orchestrator/: Cargo.toml  README.md  all.html  api.toml  default-libp2p-run-config.toml  default-run-config.toml  default-web-server-run-config.toml  fn.main.html  index.html  sidebar-items.js
orchestrator/infra/: constant.BUILDER_BASE_PORT.html  constant.VALIDATOR_BASE_PORT.html  fn.calculate_num_tx_per_round.html  fn.gen_local_address.html  fn.generate_transactions.html  fn.initialize_builder.html  fn.load_config_from_file.html  fn.main_entry_point.html  fn.read_orchestrator_init_config.html  fn.run_orchestrator.html  index.html  sidebar-items.js  struct.CombinedDARun.html  struct.CombinedDaRun.html  struct.ConfigArgs.html  struct.Libp2pDARun.html  struct.Libp2pDaRun.html  struct.OrchestratorArgs.html  struct.PushCdnDaRun.html  trait.RunDA.html  trait.RunDa.html
orchestrator/src/: client.rs  config.rs  lib.rs  runs.rs
phaselock-hotstuff/: Cargo.toml
phaselock-hotstuff/src/: lib.rs  traits.rs  utils.rs
phaselock-testing/: Cargo.toml  README.md
phaselock-testing/src/: launcher.rs  lib.rs  network_reliability.rs
phaselock-testing/tests/: atomic_storage.rs  failures.rs  libp2p.rs  lossy.rs  query_data.rs  random_tests.rs  smoke.rs
phaselock-types/: Cargo.toml
phaselock-types/src/: constants.rs  data.rs  error.rs  event.rs  lib.rs  message.rs  traits.rs
phaselock-utils/: Cargo.toml
phaselock-utils/src/: lib.rs  subscribable_mutex.rs  subscribable_rwlock.rs  waitqueue.rs
task/: Cargo.toml
task-impls/: Cargo.toml
task-impls/src/: consensus.rs  da.rs  events.rs  harness.rs  lib.rs  network.rs  view_sync.rs
task/src/: consensus.rs  event_stream.rs  events.rs  global_registry.rs  harness.rs  lib.rs  network.rs  task.rs  task_impls.rs  task_launcher.rs  task_state.rs
testing/: Cargo.toml  README.md
testing-macros/: Cargo.toml
testing-macros/src/: lib.rs
testing-macros/tests/: example_test.rs  failures.rs  random_tests.rs  smoke.rs
testing/src/: completion_task.rs  launcher.rs  lib.rs  network_reliability.rs  node_ctx.rs  node_types.rs  old_test_runner.rs  overall_safety_task.rs  per_node_safety_task.rs  round.rs  round_builder.rs  spinning_task.rs  system_handle.rs  task_helpers.rs  test_builder.rs  test_description.rs  test_errors.rs  test_launcher.rs  test_runner.rs  test_types.rs  txn_task.rs
testing/tests/: atomic_storage.rs  basic.rs  catchup.rs  centralized_server.rs  centralized_web_server.rs  consensus.rs  consensus_task.rs  da_task.rs  failures.rs  fallback_network.rs  libp2p.rs  lossy.rs  network_task.rs  orchestrator.rs  query_data.rs  random_tests.rs  sequencing_test.rs  sequencing_tests.rs  smoke.rs  timeout.rs  view_sync_task.rs  web_server.rs
types/: Cargo.toml
types/src/: certificate.rs  constants.rs  data.rs  error.rs  event.rs  lib.rs  message.rs  traits.rs  vote.rs
utils/: Cargo.toml  all.html  index.html  macro.bail.html  macro.debug.html  macro.ensure.html  macro.error.html  macro.info.html  macro.line_info.html  macro.log.html  macro.trace.html  macro.warn.html  sidebar-items.js
utils/anytrace/: constant.DEFAULT_LOG_LEVEL.html  enum.Level.html  fn.concatenate.html  index.html  macro.bail.html  macro.debug.html  macro.ensure.html  macro.error.html  macro.info.html  macro.line_info!.html  macro.line_info.html  macro.log.html  macro.trace.html  macro.warn.html  sidebar-items.js  struct.Error.html  trait.Context.html  trait.Log.html  trait.Wrap.html  type.Result.html
utils/src/: bincode.rs  broadcast.rs  channel.rs  hotshot_task.rs  lib.rs  subscribable_mutex.rs  subscribable_rwlock.rs  waitqueue.rs
web_server/: Cargo.toml  all.html  api.toml  fn.main.html  index.html  sidebar-items.js  struct.WebServerArgs.html
web_server/src/: api_config.rs  config.rs  lib.rs
(+6370 files in other folders)
