[workspace.package]
version = "0.5.26"                                        # same as `hotshot`, but workspace subcrate can also release its own version
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
rust-version = "1.65.0"
homepage = "https://github.com/EspressoSystems/HotShot"
documentation = "https://hotshot.docs.espressosys.com"
repository = "https://github.com/EspressoSystems/HotShot"
### Workspace

# The hotshot-types crate needs to be a separate crate, as to not create a circular dependency
# when implementing traits externally
[workspace]
members = [
  "crates/hotshot",
  "crates/hotshot-stake-table",
  "crates/libp2p-networking",
  "crates/macros",
  "crates/testing-macros",
  "crates/task",
  "crates/task-impls",
  "crates/testing",
  "crates/examples",
  "crates/example-types",
  "crates/types",
  "crates/builder-api",
]
resolver = "2"

[workspace.dependencies]
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ed-on-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-std = { version = "0.4", default-features = false }
async-broadcast = "0.7"
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.4.2", default-features = false, features = [
  "logging-utils",
] }
task = { git = "https://github.com/EspressoSystems/HotShotTasks.git" }
async-lock = "2"
async-std = { version = "1", features = ["attributes"] }
async-trait = "0.1"
bincode = "1"
bitvec = { version = "1", default-features = false, features = [
  "alloc",
  "atomic",
  "serde",
] }
blake3 = "1.5"
commit = { git = "https://github.com/EspressoSystems/commit" }
custom_debug = "0.5"
digest = "0.10"
either = "1.10"
espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.1" }
ethereum-types = { version = "0.14", features = ["impl-serde"] }
futures = "0.3"
# TODO generic-array should not be a direct dependency
# https://github.com/EspressoSystems/HotShot/issues/1850
generic-array = { version = "0.14.7", features = ["serde"] }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.2", features = [
  "test-srs",
] }
jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.3" }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.2" }
jf-utils = { git = "https://github.com/espressosystems/jellyfish", tag = "0.4.2" }
lazy_static = "1"
libp2p-identity = "0.2"
libp2p-networking = { path = "./crates/libp2p-networking", version = "0.5", default-features = false }
libp2p-swarm-derive = { version = "0.34" }
lru = "0.12"
portpicker = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_bytes = { version = "0.11" }
serde_json = { version = "1.0" }
sha2 = "0.10"
snafu = "0.8"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco.git", tag = "v0.5.0" }
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco.git", tag = "v0.5.0" }
time = "0.3"
toml = "0.8"
tracing = "0.1"
typenum = "1"
memoize = { version = "0.4", features = ["full"] }
versioned-binary-serialization = { git = "https://github.com/EspressoSystems/versioned-binary-serialization.git", tag = "0.1.2" }
clap = { version = "4", features = ["derive", "env"] }

libp2p = { package = "libp2p", version = "0.53", features = [
  "macros",
  "autonat",
  "cbor",
  "dns",
  "floodsub",
  "gossipsub",
  "identify",
  "kad",
  "mdns",
  "noise",
  "ping",
  "plaintext",
  "pnet",
  "quic",
  "relay",
  "request-response",
  "rendezvous",
  "secp256k1",
  "serde",
  "tcp",
  "uds",
  "websocket",
  "yamux",
] }
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
anyhow = "1"


# Push CDN imports
cdn-client = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.1.19" }
cdn-broker = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.1.19" }
cdn-marshal = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.1.19" }

### Profiles
###
### Note: these only apply to example executables or tests built from within this crate. They have
### no effect on crates that depend on this crate.

## Apply some optimizations to test dependencies in debug/test builds

[profile.dev]
strip = true
debug = 0

# Generally optimize dependencies a little
[profile.dev.package."*"]
opt-level = 1
strip = true
debug = 0

# The release profile with LTO.
# CI uses this profile. To run it locally, add `--profile=release-lto` to `cargo build` or `cargo
# test`.
[profile.release-lto]
debug = 0
inherits = "release"
# Enable "thin" LTO to optimize performance.
lto = "thin"

## LTO doesn't work with careful
## explicitly specifying features in case releases features change
[profile.careful]
debug = 1
inherits = "release"
lto = "off"
incremental = true

[workspace.lints.clippy]
# warns
all = "warn"
pedantic = "warn"
missing_docs_in_private_items = "warn"
panic = "warn"
# allows
doc_markdown = "allow"
module_name_repetitions = "allow"

[workspace.lints.rust]
# warns
rust_2018_idioms = "warn"
# TODO change to deny
missing_docs = "warn"
warnings = "warn"
