[workspace.package]
version = "0.5.79"                                        # same as `hotshot`, but workspace subcrate can also release its own version
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
rust-version = "1.76.0"
homepage = "https://github.com/EspressoSystems/HotShot"
documentation = "https://hotshot.docs.espressosys.com"
repository = "https://github.com/EspressoSystems/HotShot"
### Workspace

# The hotshot-types crate needs to be a separate crate, as to not create a circular dependency
# when implementing traits externally
[workspace]
members = [
    "crates/builder-api",
    "crates/example-types",
    "crates/examples",
    "crates/fakeapi",
    "crates/hotshot",
    "crates/hotshot-stake-table",
    "crates/libp2p-networking",
    "crates/macros",
    "crates/orchestrator",
    "crates/task",
    "crates/task-impls",
    "crates/testing",
    "crates/types",
    "crates/utils",
    "crates/workspace-hack",
]
resolver = "2"

[workspace.dependencies]
ark-bn254 = "0.4"
ark-ed-on-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-std = { version = "0.4", default-features = false }
async-broadcast = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-lock = "3"
async-trait = "0.1"
bincode = "1"
bitvec = { version = "1", default-features = false, features = [
    "alloc",
    "atomic",
    "serde",
] }
blake3 = "1.5"
cbor4ii = { version = "1.0", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["now"] }
committable = "0.2"
derive_more = { version = "1.0" }
digest = "0.10"
either = "1.13"
espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.1" }
primitive-types = { version = "0.12.2", default-features = false, features = [
    "serde",
] }
futures = { version = "0.3", default-features = false }
jf-crhf = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
jf-vid = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
jf-signature = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-signature-v0.2.0" }
jf-rescue = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
jf-pcs = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
jf-utils = { version = "0.4.4", git = "https://github.com/espressosystems/jellyfish", tag = "0.4.5" }
lazy_static = "1"
libp2p-identity = "0.2"
libp2p-networking = { path = "./crates/libp2p-networking", version = "0.5", default-features = false }
libp2p-swarm-derive = { version = "0.35" }
lru = "0.12"
multiaddr = { version = "0.18" }
portpicker = "0.1"
rand = { version = "0.9", features = ["small_rng"] }
rand_chacha = { version = "0.9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde-inline-default = "0.2"
serde_bytes = { version = "0.11" }
serde_json = { version = "1" }
sha2 = "0.10"
thiserror = "2"
surf-disco = "0.9"
tagged-base64 = "0.4"
tide-disco = "0.9"
time = "0.3"
toml = "0.8"
tracing = "0.1"
typenum = "1"
memoize = { version = "0.4", features = ["full"] }
vbs = "0.1"
clap = { version = "4", features = ["derive", "env"] }
url = { version = "2", features = ["serde"] }
vec1 = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

libp2p = { package = "libp2p", version = "0.54", default-features = false, features = [
    "macros",
    "autonat",
    "cbor",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "quic",
    "request-response",
    "secp256k1",
    "serde",
] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "net",
    "parking_lot",
    "rt-multi-thread",
    "sync",
    "time",
    "tracing",
] }
anyhow = "1"

# Push CDN imports
cdn-client = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.5.6" }
cdn-broker = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.5.6" }
cdn-marshal = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.5.6" }
cdn-proto = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.5.6" }

### Profiles
###
### Note: these only apply to example executables or tests built from within this crate. They have
### no effect on crates that depend on this crate.

# Apply some optimizations to test dependencies in debug/test builds
[profile.dev]
strip = true
debug = 0

# Generally optimize dependencies a little
[profile.dev.package."*"]
opt-level = 1
strip = true
debug = 0

# The release profile with LTO.
# CI uses this profile. To run it locally, add `--profile=release-lto` to `cargo build` or `cargo
# test`.
[profile.release-lto]
debug = 0
inherits = "release"
# Enable "thin" LTO to optimize performance.
lto = "thin"

## LTO doesn't work with careful
## explicitly specifying features in case releases features change
[profile.careful]
debug = 1
inherits = "release"
lto = "off"
incremental = true

[workspace.lints.clippy]
# warns
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"
panic = "warn"
clone_on_ref_ptr = "warn"
# allows
doc_markdown = "allow"
module_name_repetitions = "allow"

[workspace.lints.rust]
# warns
rust_2018_idioms = { level = "warn", priority = -1 }
# TODO change to deny
missing_docs = "warn"
warnings = "warn"
