[package]
name = "hotshot-centralized-server"
version = "0.1.1"
edition = "2021"

[features]
default = []
full-ci = ["async-std-executor"]
tokio-ci = ["tokio-executor"]
async-std-executor = ["dep:async-std", "hotshot-types/async-std-executor", "hotshot-utils/async-std-executor"]
tokio-executor = ["dep:tokio", "hotshot-types/tokio-executor", "hotshot-utils/tokio-executor"]
profiling = ["hotshot-utils/profiling"]

[dependencies]
async-std = { version = "1.12", optional = true }
async-trait = "0.1.57"
bincode = "1.3.3"
cfg-if = "1"
commit = { git = "https://github.com/EspressoSystems/commit", tag = "0.1.0" }
flume = "0.10.14"
futures = "0.3.24"
libp2p-core = { version = "0.36.0", default-features = false }
hotshot-types = { version = "0.1.0", path = "../types", default-features = false }
hotshot-utils = { path = "../utils", default-features = false }
tokio = { version = "1", features = ["full", "tracing"], optional = true }
tracing = "0.1.36"
serde = { version = "1.0.143", features = ["derive"] }
snafu = "0.7.1"
toml = "0.5.9"
