[package]
name = "hotshot-centralized-server"
version = "0.1.1"
edition = "2021"

[features]
default = []
full-ci = ["async-std-executor"]
tokio-ci = ["tokio-executor"]
async-std-executor = [
    "dep:async-std",
    "hotshot-types/async-std-executor",
    "hotshot-utils/async-std-executor",
]
tokio-executor = [
    "dep:tokio",
    "hotshot-types/tokio-executor",
    "hotshot-utils/tokio-executor",
]
profiling = ["hotshot-utils/profiling"]
channel-flume = ["hotshot-types/channel-flume", "hotshot-utils/channel-flume"]
channel-tokio = ["hotshot-types/channel-tokio", "hotshot-utils/channel-tokio"]
channel-async-std = [
    "hotshot-types/channel-async-std",
    "hotshot-utils/channel-async-std",
]

[dependencies]
async-std = { version = "1.12", optional = true }
async-trait = "0.1.58"
bincode = "1.3.3"
cfg-if = "1"
commit = { git = "https://github.com/EspressoSystems/commit", tag = "0.2.0" }
futures = "0.3.25"
libp2p-core = { version = "0.37.0", default-features = false }
hotshot-types = { version = "0.1.0", path = "../types", default-features = false }
hotshot-utils = { path = "../utils", default-features = false }
tokio = { version = "1", optional = true, features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tracing = "0.1.37"
serde = { version = "1.0.147", features = ["derive"] }
snafu = "0.7.3"
toml = "0.5.9"
