[package]
name = "hotshot-consensus"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full-ci = ["async-std-executor"]
tokio-ci = ["tokio-executor"]
async-std-executor = [
    "dep:async-std",
    "hotshot-types/async-std-executor",
    "async-compatibility-layer/async-std-executor",
]
tokio-executor = [
    "dep:tokio",
    "hotshot-types/tokio-executor",
    "async-compatibility-layer/tokio-executor",
]
profiling = ["async-compatibility-layer/profiling"]
channel-flume = ["hotshot-types/channel-flume", "async-compatibility-layer/channel-flume"]
channel-tokio = ["hotshot-types/channel-tokio", "async-compatibility-layer/channel-tokio"]
channel-async-std = [
    "hotshot-types/channel-async-std",
    "async-compatibility-layer/channel-async-std",
]

[dependencies]
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.2.0", default-features = false, features = [ "logging-utils" ] }
async-lock = "2.7"
async-std = { version = "1.12", optional = true }
async-trait = "0.1.68"
# TODO ed: Delete this dependency after https://github.com/EspressoSystems/HotShot/issues/614 is finished
bincode = "1.3.3"
commit = { git = "https://github.com/EspressoSystems/commit", tag = "0.2.2" }
custom_debug = "0.5"
derivative = "2.2"
either = { version = "1.8.1" }
futures = "0.3.28"
hotshot-types = { path = "../types", default-features = false }
hotshot-utils = { path = "../utils"}
snafu = "0.7.4"
tokio = { version = "1", optional = true, features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tracing = "0.1.37"
time = "0.3.21"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc", "atomic", "serde"] }
hotshot-primitives = { git = "https://github.com/EspressoSystems/hotshot-primitives",  rev = "4aee90c"} # branch = 'hotshot-compat', rev after downgrade: rev = "b22c7f2" branch = 'update_jellyfish_0.4.0_pre.0'
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", rev = "470a833"} # branch = 'hotshot-compat', downgrade rev = "36dceb63", branch = 'downgrade-curve25519'
blake3 = { version = "1.3.3", features = ["traits-preview"] }
