[package]
name = "hotshot-consensus"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full-ci = ["async-std-executor"]
tokio-ci = ["tokio-executor"]
async-std-executor = [
    "dep:async-std",
    "hotshot-types/async-std-executor",
    "async-compatibility-layer/async-std-executor",
]
tokio-executor = [
    "dep:tokio",
    "hotshot-types/tokio-executor",
    "async-compatibility-layer/tokio-executor",
]
profiling = ["async-compatibility-layer/profiling"]
channel-flume = [
    "hotshot-types/channel-flume",
    "async-compatibility-layer/channel-flume",
]
channel-tokio = [
    "hotshot-types/channel-tokio",
    "async-compatibility-layer/channel-tokio",
]
channel-async-std = [
    "hotshot-types/channel-async-std",
    "async-compatibility-layer/channel-async-std",
]

[dependencies]
async-compatibility-layer = { workspace = true }
async-lock = { workspace = true }
async-std = { version = "1.12", optional = true }
async-trait = { workspace = true }
# TODO ed: Delete this dependency after https://github.com/EspressoSystems/HotShot/issues/614 is finished
bincode = { workspace = true }
blake3 = { workspace = true, features = ["traits-preview"] }
commit = { workspace = true }
custom_debug = { workspace = true }
derivative = "2.2"
either = { workspace = true }
futures = { workspace = true }
hotshot-types = { path = "../types", default-features = false }
hotshot-utils = { path = "../utils" }
snafu = { workspace = true }
tokio = { version = "1", optional = true, features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tracing = { workspace = true }
time = { workspace = true }
bitvec = { workspace = true }
hotshot-primitives = { workspace = true }
jf-primitives = { workspace = true }
