[package]
name = "hotshot-consensus"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
async-compatibility-layer = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
# TODO ed: Delete this dependency after https://github.com/EspressoSystems/HotShot/issues/614 is finished
bincode = { workspace = true }
blake3 = { workspace = true, features = ["traits-preview"] }
commit = { workspace = true }
custom_debug = { workspace = true }
derivative = "2.2"
either = { workspace = true }
futures = { workspace = true }
hotshot-types = { path = "../types", default-features = false }
hotshot-utils = { path = "../utils" }
snafu = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
bitvec = { workspace = true }
jf-primitives = { workspace = true }

[target.'cfg(all(async_executor_impl = "tokio"))'.dependencies]
tokio = { workspace = true }
[target.'cfg(all(async_executor_impl = "async-std"))'.dependencies]
async-std = { workspace = true }
