[package]
description = "Libp2p Networking Layer"
name = "libp2p-networking"
version = "0.1.0"
edition = "2021"
authors = ["Nathan McCarty <nathan.mccarty@translucence.net>", "Victor Koenders <vkoenders@espressosys.com>", "Justin Restivo <justin@espressosys.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes" ] }
bincode = "1.3.3"
blake3 = "1.3.1"
color-eyre = "0.6.2"
flume = "0.10.14"
futures = "0.3.23"
libp2p = { version = "0.47.0", features = ["serde"] }
parking_lot = "0.12.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
snafu = "0.7.0"
tracing = "0.1.36"
rand = "0.8.5"
async-trait = "0.1.57"
derive_builder = "0.11.1"
custom_debug = "0.5"
hotshot-utils = { path = "../utils", version = "0.1.0", features = ["logging-utils"] }
hotshot-types = { path = "../types", version = "0.1.0"}
either = { version = "1.8.0" }

# Feature dependencies

## webui
tide = { version = "0.16", optional = true, default-features = false, features = ["h1-server"] }

[target.'cfg(target_os = "linux")'.dependencies]
## lossy_network dependencies
nix = { version = "0.25.0", optional = true }
rtnetlink = { git = "ssh://git@github.com/EspressoSystems/netlink.git", version = "0.9.1", features = ["smol_socket"], default-features = false, optional = true}
netlink-packet-route = { git = "ssh://git@github.com/EspressoSystems/netlink.git", version = "0.11.0", optional = true}
netlink-packet-utils = { git = "ssh://git@github.com/EspressoSystems/netlink.git", version = "0.5.1", optional = true}
netlink-packet-core = { git = "ssh://git@github.com/EspressoSystems/netlink.git", version = "0.4.2", optional = true}
netlink-proto = { git = "ssh://git@github.com/EspressoSystems/netlink.git", version = "0.9.2", optional = true}
netlink-sys = { git = "ssh://git@github.com/EspressoSystems/netlink.git", version = "0.8.2", features = [ "smol_socket" ], optional = true }
netlink-packet-generic = { git = "ssh://git@github.com/EspressoSystems/netlink.git", version = "0.2.0", optional = true}

[features]
webui = ["tide"]
# this only has effect on linux
lossy_network = ["nix", "netlink-packet-route", "netlink-packet-utils", "netlink-packet-core", "netlink-proto", "netlink-sys", "netlink-packet-generic", "rtnetlink"]

[dev-dependencies]
clap = { version = "3.2.18", features = [ "derive", "env" ] }
