[package]
description = "Libp2p Networking Layer"
name = "libp2p-networking"
version = "0.1.0"
edition = "2021"
authors = ["Espresso Systems <hello@espressosys.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
full-ci = ["async-std-executor", "lossy_network", "webui"]
tokio-ci = ["tokio-executor", "lossy_network", "webui"]
webui = ["tide"]

# this only has effect on linux
lossy_network = [
    "nix",
    "netlink-packet-route",
    "netlink-packet-utils",
    "netlink-packet-core",
    "netlink-proto",
    "netlink-sys",
    "netlink-packet-generic",
    "rtnetlink",
]
async-std-executor = [
    "dep:async-std",
    "async-compatibility-layer/async-std-executor",
    "libp2p/async-std",
]
tokio-executor = [
    "dep:tokio",
    "async-compatibility-layer/tokio-executor",
    "libp2p/tokio",
]
profiling = ["async-compatibility-layer/profiling"]
channel-flume = ["async-compatibility-layer/channel-flume"]
channel-tokio = ["async-compatibility-layer/channel-tokio"]
channel-async-std = [
    "async-compatibility-layer/channel-async-std",
]

[dependencies]
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.2.0", default-features = false, features = [ "logging-utils" ]  }
async-lock = "2.7"
async-std = { version = "1.12.0", optional = true }
async-trait = "0.1.71"
bincode = "1.3.3"
blake3 = "1.4.1"
color-eyre = "0.6.2"
custom_debug = "0.5"
derive_builder = "0.12.0"
either = { version = "1.8.1" }
futures = "0.3.28"
hotshot-utils = { path = "../utils"}
libp2p-swarm-derive = { version = "=0.32.0" }
libp2p-identity = "0.1.2"
libp2p = { version = "0.51.3", default-features = false, features = [
    "macros",
    "autonat",
    "deflate",
    "dns",
    "floodsub",
    "gossipsub",
    "identify",
    "kad",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "plaintext",
    "pnet",
    "relay",
    "request-response",
    "rendezvous",
    "secp256k1",
    "serde",
    "tcp",
    "uds",
    "wasm-ext",
    "websocket",
    "yamux",
] }
libp2p-noise = { version = "0.42.2", default-features = false }
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.168", features = ["derive"] }
serde_json = "1.0.102"
snafu = "0.7.5"
tokio = { version = "1", optional = true, features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tide = { version = "0.16", optional = true, default-features = false, features = [
    "h1-server",
] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
void = "1.0.2"

[target.'cfg(target_os = "linux")'.dependencies]
## lossy_network dependencies
nix = { version = "0.26.2", optional = true }
rtnetlink = { git = "https://github.com/espressosystems/netlink.git", version = "0.9.1", features = [
    "smol_socket",
], default-features = false, optional = true }
netlink-packet-route = { git = "https://github.com/espressosystems/netlink.git", version = "0.11.0", optional = true }
netlink-packet-utils = { git = "https://github.com/espressosystems/netlink.git", version = "0.5.1", optional = true }
netlink-packet-core = { git = "https://github.com/espressosystems/netlink.git", version = "0.4.2", optional = true }
netlink-proto = { git = "https://github.com/espressosystems/netlink.git", version = "0.9.2", optional = true }
netlink-sys = { git = "https://github.com/espressosystems/netlink.git", version = "0.8.2", features = [
    "smol_socket",
], optional = true }
netlink-packet-generic = { git = "https://github.com/espressosystems/netlink.git", version = "0.2.0", optional = true }

[dev-dependencies]
#  TODO should this be here as a dev dep? at least should be optional ...
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.3", features = ["derive", "env"] }
